[Update] to pass a SonarLint